<resources>
    <string name="app_name">SunInMemo</string>
    <string name="Account_Enter">Account:</string>
    <string name="Password_Enter">Password:</string>
    <string name="Account_hint">Enter your account here</string>
    <string name="Password_hint">Enter your password here</string>
    <string name="Patient_btn">Patient</string>
    <string name="CareGiver_btn">CareGiver</string>
    <string name="Login_btn">Log In</string>
    <string name="SignIn_btn">Sign In</string>
    <string name="Add_btn">add</string>
    <string name="Set_time">8:00</string>
    <string name="Set_activity">Activity:</string>
    <string name="Set_tips">Tips:</string>
    <string name="Set_done">Done</string>
    <string name="Enter_act">Click to enter the activity</string>
    <string name="Enter_tips">Click to enter Tips</string>
</resources>