<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Time_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="172dp"
        android:background="@color/white"
        android:text="@string/Set_time"
        android:textColor="@color/black"
        android:textSize="80sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,missing constrain"></Button>

    <TextView
        android:id="@+id/Act_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Set_activity"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        >
    </TextView>
    <TextView
        android:id="@+id/Tips_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Set_tips"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginStart="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"
        >

    </TextView>

    <Button
        android:id="@+id/addDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Set_done"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="441dp">

    </Button>

    <TextView
        android:id="@+id/text_activity"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="116dp"
        android:hint="@string/Enter_act"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/Act_set"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Act_set"
        app:layout_constraintTop_toTopOf="@id/Act_set">

    </TextView>
    <TextView
        android:id="@+id/text_tips"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="116dp"
        android:hint="@string/Enter_tips"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/Tips_set"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Tips_set"
        app:layout_constraintTop_toTopOf="@id/Tips_set"
        >
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>